objects/nCSA_FRAME__csaDataInstaller__mdt.object
<CustomObject>
    <description>Ability to log Data Installers for Accelerators</description>
    <fields>
        <fullName>nCSA_FRAME__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Define if Data Installer is Active for Usage.</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nCSA_FRAME__Icon_Path__c</fullName>
        <description>Path to selected Icon</description>
        <inlineHelpText>Path to selected Icon</inlineHelpText>
        <label>Icon Path</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCSA_FRAME__Order__c</fullName>
        <description>Order to appear on List</description>
        <inlineHelpText>Please Select a Number from 12- keeping in mind other acceleratos, ask a lead for details</inlineHelpText>
        <label>Order</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>nCSA_FRAME__Page_Name__c</fullName>
        <description>API Name of the Page</description>
        <inlineHelpText>API Name of the Page</inlineHelpText>
        <label>Page Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCSA_FRAME__Route_App_Name__c</fullName>
        <description>Route App Name</description>
        <inlineHelpText>App Name of Route, csa-data-installer is prefixed</inlineHelpText>
        <label>Route App_Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nCSA_FRAME__Route_Name__c</fullName>
        <description>Route Name</description>
        <inlineHelpText>Name of the route that will be created</inlineHelpText>
        <label>Route Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>csaDataInstaller</label>
    <pluralLabel>csaDataInstallers</pluralLabel>
</CustomObject>